--- a/assets/ComputationSlides/YangLabGuideline_2022.html
+++ b/assets/ComputationSlides/YangLabGuideline_2022.html
@@ -125,14 +125,15 @@
 <li data-marpit-fragment="5"><strong>Markdown tools</strong> : <a href="https://macdown.uranusjr.com/">MacDown</a> for writing simple markdown file; <a href="https://marketplace.visualstudio.com/items?itemName=marp-team.marp-vscode">MMarp for VS Code</a> for writing slides.</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-marpit-fragments="5" data-paginate="true" data-background-color="#fff" data-theme="gaia" data-marpit-pagination="11" data-marpit-pagination-total="14" style="--paginate:true;--background-color:#fff;--theme:gaia;background-color:#fff;background-image:none;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-marpit-fragments="6" data-paginate="true" data-background-color="#fff" data-theme="gaia" data-marpit-pagination="11" data-marpit-pagination-total="14" style="--paginate:true;--background-color:#fff;--theme:gaia;background-color:#fff;background-image:none;">
 <h1>Tips 2022</h1>
 <ul>
-<li data-marpit-fragment="1">Pipe data in R scripts : <code>%&gt;%</code> or <code>|&gt;</code> with fast key <code>cmd + shift + m</code></li>
-<li data-marpit-fragment="2">Write comments and use informative variable names and function names during programming</li>
-<li data-marpit-fragment="3">Useful R libraries for data science: <a href="https://www.tidyverse.org/">tidyverse</a>, <a href="https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html">data.table</a>, <a href="https://topepo.github.io/caret/">caret</a></li>
-<li data-marpit-fragment="4">See <a href="https://yanglab-emory.github.io/pages/teaching.html">YangLabTeaching</a> webpage for more resources about recent course slides, scientific writing, and scientific presentations.</li>
-<li data-marpit-fragment="5"><strong>Be Organized</strong></li>
+<li data-marpit-fragment="1">Use <a href="https://www.docker.com/">Docker</a> for software development : Avoid the hassel of setting up local environment</li>
+<li data-marpit-fragment="2">Pipe data in R scripts : <code>%&gt;%</code> or <code>|&gt;</code> with fast key <code>cmd + shift + m</code></li>
+<li data-marpit-fragment="3">Write comments and use informative variable names and function names during programming</li>
+<li data-marpit-fragment="4">Useful R libraries for data science: <a href="https://www.tidyverse.org/">tidyverse</a>, <a href="https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html">data.table</a>, <a href="https://topepo.github.io/caret/">caret</a></li>
+<li data-marpit-fragment="5">See <a href="https://yanglab-emory.github.io/pages/teaching.html">YangLabTeaching</a> webpage for more resources about recent course slides, scientific writing, and scientific presentations.</li>
+<li data-marpit-fragment="6"><strong>Be Organized</strong></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-marpit-fragments="3" data-paginate="true" data-background-color="#fff" data-theme="gaia" data-marpit-pagination="12" data-marpit-pagination-total="14" style="--paginate:true;--background-color:#fff;--theme:gaia;background-color:#fff;background-image:none;">
